Updated draft of SF Marketing Products FAQ

--- a/sites/faq/salesforce/what-is-the-difference-between-sf-marketing-clouds.mdx
+++ b/sites/faq/salesforce/what-is-the-difference-between-sf-marketing-clouds.mdx
@@ -88,7 +88,7 @@ __Name history__: ExactTarget (ET) » Marketing Cloud (SFMC) » Marketing Cloud 
 
 Marketing Cloud Engagement (acquired by Salesforce in 2013) is the oldest and most established of the three products. It is a robust and feature-rich platform that has been around for 25 years. It is designed for large enterprises and B2C companies with complex marketing needs. And, as the only of the three, it can work as a __standalone__ Marketing Automation platform, without the need for Salesforce CRM.
 
-Its main unqiue selling point - not only among the Salesforce Marketing Automation products, but also in the broader Marketing Automation landscape - is its __flexibility__ and __customisability__. It can be tailored to fit the specific needs of any business, no matter how complex.
+Its main unique selling point - not only among the Salesforce Marketing Automation products, but also in the broader Marketing Automation landscape - is its __flexibility__ and __customisability__. It can be tailored to fit the specific needs of any business, no matter how complex.
 
 This flexibility comes at a cost - it can be __challenging__ to set up and use to its fullest, especially for non-technical users, and there are tons of (first party and third party) add-ons that bring various features and capabilities to the platform. It's not IT driven tool like Adobe Campaign Classic, but definitely not a no-code tool like Oracle Eloqua. To make the full use of its capabilities, you need a mixed team of skilled marketers, developers and administrators.
 
@@ -116,7 +116,7 @@ Marketing Cloud Account Engagement (acquired by Salesforce in 2013) is the secon
 
 It is designed for medium to large B2B companies with relatively straightforward marketing needs. Lead scoring and grading, prospect tracking, lead nurturing and connection to Salesforce Sales Cloud are key strengths of the platform. It is user-friendly and easy to set up, making it a good choice for small to medium marketing teams without dedicated IT support.
 
-It offers many drag-and-drop features that either require or at least greadly beneift from pro-code approach in Marketing Cloud Engagement. However, it is not as flexible or customisable as Marketing Cloud Engagement, and it lacks some advanced features.
+It offers many drag-and-drop features that either require or at least greatly beneift from pro-code approach in Marketing Cloud Engagement. However, it is not as flexible or customisable as Marketing Cloud Engagement, and it lacks some advanced features.
 
 Just like Marketing Cloud Engagement, it has a strong community and a broad pool of resources available. Being available directly on the Salesforce Lightning Platform, you can even leverage your existing Salesforce CRM people to support it.
 
@@ -132,7 +132,7 @@ All Marketing Cloud Account Engagement customers already receive access to the n
 
 __Name history__: Marketing Cloud Growth (MCG) » Marketing Cloud Advanced (MCA) » Marketing Cloud [on Core] (MCoC)» Marketing Cloud Next (MCN) » Marketing Cloud (MC)
 
-The newest of the three products, Marketing Cloud, is a fresh take on Marketing Automation. Announced in 2024, it is built from scratch on the Data 360 (now Data 360) platform, leveraging its capabilities and integrations with other Salesforce products (especially the new hype champion - Agentforce).
+The newest of the three products, Marketing Cloud, is a fresh take on Marketing Automation. Announced in 2024, it is built from scratch on the Data 360 (also known as Data Cloud in ancient early 2025 days) platform, leveraging its capabilities and integrations with other Salesforce products (especially the new hype champion - Agentforce).
 
 Based on it's current features, it is designed for small businesses and small marketing teams, both B2C and B2B, with basic marketing needs. It's not that clear however, when you consider the pre-requisite of having at least Enterprise tier Salesforce CRM licence to use it. It is not a standalone Marketing Automation platform like Marketing Cloud Engagement, but rather a complementary product.
 
@@ -178,9 +178,9 @@ It is designed for medium to large B2C companies with complex personalization ne
 
 :::note You Should Know
 
-While there is no official end-of-life annoucement for Marketing Cloud Personalization available yet, Salesforce is not investing in it anymore and focusing on the new Salesforce Personalization product instead. The product hasn't seen any major updates in the last two years, and there is no roadmap for future development. What's more, Salesforce is quitely introducing new limits and restrictions to the existing MCP customers through documentation, making it less attractive.
+While there is no official end-of-life annoucement for Marketing Cloud Personalization available yet, Salesforce is not investing in it anymore and focusing on the new Salesforce Personalization product instead. The product hasn't seen any major updates in the last two years, and there is no roadmap for future development. What's more, Salesforce is quietly introducing new limits and restrictions to the existing MCP customers through documentation, making it less attractive.
 
-However, if you are using Marketing Cloud Engagement, it is still the best option for real-time personalization. It is a mature and powerful platform with strightforward pricing that can deliver results.
+However, if you are using Marketing Cloud Engagement, it is still the best option for real-time personalization. It is a mature and powerful platform with straightforward pricing that can deliver results.
 
 :::
 
@@ -235,29 +235,57 @@ As I don't have much experience with neither of them, I won't go into details he
 
 ## Salesforce Marketing Future
 
-As you can see, Salesforce Marketing Cloud product (and naming) landscape is changing a lot now. We are currently going through a stretched transition period where the old and new products are co-existing side by side. What does it mean for you?
+As you can see, Salesforce Marketing Cloud product (and naming) landscape is changing a lot now. We are currently in a stretched transition period where old and new products coexist. What does it mean for you?
 
 ### For Implementation Partners
 
-If you are implementation partner, the current landscape is both a challenge and an opportunity.
+If you are an implementation partner, the current landscape is both a challenge and an opportunity.
 
-On one hand, the transition period means that there will be a lot new business for you, as customers will need help with migrating from old products to new ones, and with setting up and using the new products. The best part? You don't even have to go through full sales funnel to get new leads for it - your past successfull implementations are the best leads for introducing the new features. Additionally, if you are focused on Salesforce it also means that you can target new audiences covered by the fresh offerings and extend your pripieline.
+#### Implementation Opportunities
 
-On the other hand it means that you will need to invest in learning the new products and staying up-to-date with the latest developments. The new products are still evolving, and there will be a lot of changes and updates in the coming months and years. You will need to be flexible and adaptable to keep up with the changes. And it won't be easy - new products are built on new platforms (Data 360, Agentforce 360) that are different from the old ones, and you will need to learn new skills and technologies to work with them.
+On one hand, the transition period means that there will be a lot of new business for you. Customers will need help with migrating from old products to new ones and setting up the new features.
 
-The next few years will be balancing act between leveraging your existing expertise for ongoing implementations of old tools and investing in new skills to unlock the new opportunities. But if you can do it, you will be well-positioned to take advantage of the transition and position yourself as a leader for the Next Marketing Cloud.
+- __Easy Leads__: You don't have to go through the full sales funnel. Your past successful implementations of MCE & MCAE are the best leads for introducing the Next features.
+- __New Audiences__: If you are focused only on Salesforce Marketing solutions, you can now tap new audiences that the fresh offerings target and extend your pipeline.
+
+#### Implementation Challenges
+
+On the other hand, it means that you will need to invest in learning.
+
+- __Continuous Evolution__: The new products are still evolving. There will be a lot of changes and updates in the coming months and years - not just to the Marketing Cloud tools, but also to Data 360 and Agentforce 360. There will be a lot of relearning and replanning along with constant feed of new features and approaches.
+- __New Stack__: It won't be easy. New products are built on Data 360 and Agentforce 360. Your marketing implementation teams will need to learn completely new skills to work with them.
+
+The next few years will be a balancing act between leveraging your existing expertise for ongoing implementations and investing in new skills. But if you can do it, you will position yourself as a leader for the Next Marketing Cloud.
 
 ### For Specialists
 
-If you are Marketing Automation specialist, you will have challenging times ahead.
+If you are a Marketing Automation specialist, you will have challenging times ahead.
 
-One thing is clear - Data 360 will be the fundament of Salesforce Marketing going forward. If you want to stay relevant in the Salesforce Marketing Automation space, you will need to learn how to work with Data 360, and how to leverage its capabilities for marketing purposes. This includes understanding data modelling, segmentation, audience building, and data governance on Data 360 platform. Don't stop at certification - go deeper and understand the platform capabilities and limitations. Every single new Marketing Cloud product will leverage this knowledge.
+#### Data 360 Foundation
 
-If your specialty was Marketing Cloud Account Engagement, you have advatage of already being familiar with Salesforce CRM platform. However, as the new Marketing Cloud is soon to replace MCAE (and already is offered for free to existing customers to facilitate this move) you don't have much time to learn the new tool and its capabilities. Dive into Data 360 Agentforce 360 to be ready for the change.
+One thing is clear - Data 360 will be the foundation of Salesforce Marketing going forward. If you want to stay relevant, you need to learn how to work with Data 360 and leverage its capabilities. This includes understanding data modelling, segmentation, audience building, and data governance.
 
-If you were Marketing Cloud Engagement specialist, you have more time on your hands. MCE is not going anywhere soon, and there will be need for skilled people to support existing customers for years to come. However, you should start learning the new Marketing Cloud as well, as Marketing Cloud Engagement Plus licences are already here. They not only provide existing customers with the ne product licence, but also bring synergy between the two products. It means that even if your MCE platform is still a safe harbour for years to come, the need for MC Next skills on top of it to deliver full value of the product. Data 360 and Agentforce 360 knowledge will be key here as well.
+Don't stop at certification - go deeper. Every single new Marketing Cloud product will leverage this knowledge.
 
-In both scenarios, you should also start getting familiar with Salesforce CRM platform. Flows, Apex, LWC, Sandboxes, DevOps - those are the skills that will help you work effectively with the new Marketing Cloud products.
+#### MCAE Specialists
+
+If your specialty is Marketing Cloud Account Engagement, you have the advantage of already being familiar with the Salesforce CRM platform. However, the new Marketing Cloud is (somewhere) soon to replace MCAE (and is already offered for free to existing customers to facilitate this move).
+
+You don't have much time to learn the new tool. Dive into Data 360 and Agentforce 360 to be ready for the change. Explore the new Marketing Cloud product, experiment with its features, and start building your expertise leveraging the free licence existing MCAE customers already have.
+
+#### MCE Specialists
+
+If you are a Marketing Cloud Engagement specialist, you have more time on your hands. MCE is not going anywhere soon, and there will be a need for skilled people to support existing customers for years to come.
+
+However, you should start learning the new Marketing Cloud as well. Marketing Cloud Engagement Plus licences are already here. They not only provide existing customers with access to the new product but also bring unique features based on the synergy between the two products.
+
+It means that even if your MCE platform is still safe for years to come, you need MC Next (and Data 360, and Agentforce 360) skills to deliver full value.
+
+:::note You Should Know
+
+In all scenarios, you should start getting familiar with the Salesforce CRM platform. Flows, Apex, LWC, Sandboxes, DevOps - those are the skills that will help you work effectively with the new Marketing Cloud products.
+
+:::
 
 ### For Customers
 
@@ -265,132 +293,34 @@ A lot depends on whether you are already using any of the existing Marketing Clo
 
 #### Looking for Marketing Automation Platform
 
-If you are looking for Marketing Automation Platform and Salesforce offering looks interesting to you (for example because you are already using their CRM or needs extremly flexible and powerful platform), the [Marketing Automation Platforms](#marketing-automation-platforms) section should help you choose the right product for your needs.
+If you are looking for Marketing Automation Platform and Salesforce offering looks interesting to you (for example because you are already using their CRM or needs extremely flexible and powerful platform), the [Marketing Automation Platforms](#marketing-automation-platforms) section should help you choose the right product for your needs.
 
 The rule of thumb is:
-- If you need complex and highly customisable solution, go for Marketing Cloud Engagement.
-- If you need something simpler, B2B focused, with good support and maturity, go for Marketing Cloud Account Engagement.
-- If you are Salesforce CRM (and - even better - Data 360) user and just need basic marketing capabilities with agentic support to minimise the effort, go for Marketing Cloud.
+- If you need complex and highly customisable solution, go for __Marketing Cloud Engagement__.
+- If you need something simpler, B2B focused, with good support and maturity, go for __Marketing Cloud Account Engagement__.
+- If you are Salesforce CRM (and - even better - Data 360) user and just need basic marketing capabilities with agentic support to minimise the effort, go for the new __Marketing Cloud__.
 
-However, this will need an update in a year or two.
+:::note You Should Know
+
+This advice is valid for now, but will need an update in a year, max two with how fast the new Marketing Cloud product is evolving.
+
+:::
 
 #### With Marketing Cloud Account Engagement
 
-If you are using Marketing Cloud Account Engagement, you already have access to the new Marketing Cloud product (if you don't know anything about it, contact your Salesforce Account Executive). Start experimenting with it and gradually move your marketing activities there. Keep an eye on the new features being added, and plan your migration accordingly. The winter for MCAE is coming.
+If you are using Marketing Cloud Account Engagement, you likely already have access to the new Marketing Cloud product. If you don't know anything about it, contact your Salesforce Account Executive.
+
+Start experimenting with it and gradually move your marketing activities there. Keep an eye on the new features being added, and plan your migration accordingly. The winter for MCAE is coming.
+
+:::note You Should Know
+
+There is no migration solution as of now. You will need to plan and execute the move on your own. However, having both products available gives you the opportunity to do it gradually, testing and learning along the way. Don't wait for added pressure of a deadline - start checking it now and consier using it for new use cases to limit technical debt.
+
+:::
 
 #### With Marketing Cloud Engagement
 
-If you are using Marketing Cloud Engagement, you are in a safe (for now). However, your team should start getting familiar with the Data 360 and new Marketing Cloud product as well, as Marketing Cloud Engagement Plus licences are already here (if you don't yet have it, you will get it during the next renewal).
+If you are using Marketing Cloud Engagement, you are safe (for now). However, your team should start getting familiar with Data 360 and the new Marketing Cloud product. Marketing Cloud Engagement Plus licences are already here (and you will have it by the next renewal period at the latest).
 
-MCE+ will not only provide you with the new Marketing Cloud product licence, but also bring synergy between the two products through new features (Multi-Journey management through Flows, Digital Wallet for consumption, etc.). You don't have to worry about your existing implementation, it will be perfectly fine for years to come. But to deliver full value of the Salesforce Marketing Cloud ecosystem, your team will need to master the new tool as well.
-
-
-{/*
-## Salesforce Marketing Cloud Glossary
-
-Three things in life are certain; death, taxes, and Salesforce changing product names. To help you with this mess, I gathered here the most common names used in the Salesforce Marketing Cloud ecosystem, their shortcuts and how they relate to each other on the timeline.
-
-### Salesforce Marketing Cloud (SFMC)
-
-The original use of Salesforce Marketing Cloud name, between 2012 and 2014, was for Salesforce's social media management platform created from the merge of two acquired products - Radian6 and Buddy Media.
-
-With the acquisition of [ExactTarget](#exacttarget) in 2013, Salesforce reused the Marketing Cloud name for this new flagship Marketing Automation product. Previous social media platform became just part of this new solution as a [Social Studio](#salesforce-marketing-cloud-social-studio). This naming convention held till 2022, when that flagship product was renamed to [Marketing Cloud Engagement](#salesforce-marketing-cloud-engagement-mce).
-
-Salesforce did it to once more reuse the Marketing Cloud name, this time for their new Marketing Automation solution created from the ground up on the [Data 360](#salesforce-data-cloud) platform, known also as [Marketing Cloud on Core](#salesforce-marketing-cloud), [Marketing Cloud Growth](#salesforce-marketing-cloud-growth) and [Marketing Cloud Advanced](#salesforce-marketing-cloud-advanced).
-
-Currently the Marketing Cloud name is used frequently for both products (especially in the community), which frequently leads to confusion.
-
-### Salesforce Marketing Cloud Growth (MCG)
-
-### Salesforce Marketing Cloud Advanced (MCA)
-
-### Salesforce Marketing Cloud Next (MCN)
-
-### Salesforce Marketing Cloud Engagement (MCE)
-
-### ExactTarget
-
-Original name of the [Marketing Cloud Engagement](#salesforce-marketing-cloud-engagement-mce) product. Created in 2000 and acquired by Salesforce in 2013. The name is still used in some API endpoints and internal references.
-
-### Salesforce Marketing Cloud Account Engagement (MCAE)
-
-__Name changes__: [Pardot](#pardot) » [Marketing Cloud Account Engagement](#salesforce-marketing-cloud-account-engagement-mcae)
-
-Created in 2007 and moved into Lightning App in 2018
-
-### Pardot
-
-__Name changes__: [Pardot](#pardot) » [Marketing Cloud Account Engagement](#salesforce-marketing-cloud-account-engagement-mcae)
-
-Launched in 2007 as a standalone B2B Marketing Automation platform, bought by [ExactTarget](#exacttarget) in 2012 and acquired along with it by Salesforce in 2013. In 2022 it was renamed to [Marketing Cloud Account Engagement](#salesforce-marketing-cloud-account-engagement-mcae) to align with the rest of the Marketing Cloud products.
-
-The name is still used broadly by the community and can be found in some internal references.
-
-### Salesforce Personalization (SF)
-
-### Salesforce Marketing Cloud Personalization (MCP)
-
-__Name changes__: [Evergage](#evergage) » [Interaction Studio](#interaction-studio) » [Marketing Cloud Personalization](#salesforce-marketing-cloud-personalization-mcp)
-
-Marketing Cloud Personalization is the current name for the product formerly known as [Interaction Studio](#interaction-studio) and [Evergage](#evergage). It is a paid add-on to the [Marketing Cloud Engagement](#salesforce-marketing-cloud-engagement-mce) licence providing real-time personalization capabilities across web, email, mobile and other channels. It uses AI and Machine Learning models to deliver individualized experiences and recomendations based on customer behaviour, preferences, and interactions.
-
-Learn more about Marketing Cloud Personalization in [my MCP Docs](/docs/category/salesforce/marketing-cloud-personalization/).
-
-Since 2023 it is not actively developed further as Salesforce is focusing on recreating its capabilities in the new [Salesforce Personalization](#salesforce-personalization) product built on the [Data 360](#salesforce-data-cloud) as a replacement.
-
-### Interaction Studio
-
-__Name changes__: [Evergage](#evergage) » [Interaction Studio](#interaction-studio) » [Marketing Cloud Personalization](#salesforce-marketing-cloud-personalization-mcp)
-
-Name used between 2016 and 2020 for the first standalone real-time personalization product - Thunderhead. After [Evergage](#evergage) acquisition by Salesforce in 2020, Thunderhead Interaction Studio was retired and replaced by Evergage-driven Interaction Studio. In 2022 it was renamed once more to the current [Marketing Cloud Personalization](#salesforce-marketing-cloud-personalization-mcp).
-
-Still in use by some of the community. Might see resurgance due to the MCP acronym being now widely used in the agentic space for Model Context Protocol - including Salesforce.
-
-### Evergage
-
-__Name changes__: [Evergage](#evergage) » [Interaction Studio](#interaction-studio) » [Marketing Cloud Personalization](#salesforce-marketing-cloud-personalization-mcp)
-
-Launched in 2010 as a standalone real-time personalization platform, acquired by Salesforce in 2020 and renamed to [Interaction Studio](#interaction-studio) in 2021. In 2022 it was renamed to [Marketing Cloud Personalization](#salesforce-marketing-cloud-personalization-mcp) to align with the rest of the Marketing Cloud products.
-
-The name is still used in technical areas - endpoints, urls, one of the sitemap namespaces and internal references.
-
-
-### Salesforce Marketing Intelligence (MI)
-
-### Salesforce Marketing Cloud Intelligence (MCI)
-
-### Salesforce Marketing Cloud Intelligence Reports
-
-### Datorama
-
-### Salesforce Marketing Cloud Advertising (MCA)
-
-Marketing Cloud Advertising is the current name for the product formerly known as [Advertising Studio](#advertising-studio). It is a paid add-on to the [Marketing Cloud Engagement](#salesforce-marketing-cloud-engagement-mce) licence providing integration with major ad platforms like Google Ads, Facebook, Instagram, LinkedIn, Twitter, Pinterest and Snapchat. It provides advertising and lead capturing capabilities.
-
-Currently being retired with end of renewals: 15 August 2026.
-
-Salesforce recommends moving to [Data 360](#data-cloud) Ad Audiences product as a replacement, but (for now?) there is neither migration path nor feature parity between the two products.
-
-### Salesforce Marketing Cloud Advertising Studio
-
-Original name of the [Marketing Cloud Advertising](#salesforce-marketing-cloud-advertising-mca) product launched in 2013. Renamed in 2022 but still used in some internal references.
-
-### Salesforce Marketing Cloud Social Studio
-
-Social Studio was a paid add-on to the [Marketing Cloud Engagement](#salesforce-marketing-cloud-engagement-mce) licence providing social media management capabilities.
-
-It was retired on 18 November 2024.
-
-Salesforce doesn't provide any direct replacement, but recommends using a third-party solution they partnered with: Sprout Social.
-
-### Salesforce Data 360 (DC)
-
-### Salesforce Data 360 Ad Audiences */}
-
-
-
-
-
-
-
+MCE+ will not only provide you with the new Marketing Cloud product licence but also bring synergy between the two products (Multi-Journey management through Flows, Digital Wallet, etc.). You don't have to worry about your existing implementation. But to deliver the full value of the Salesforce Marketing Cloud ecosystem, your team will need to master the new tool as well.
 
